# NekoSchema

./: .gitignore  .nekorelease.json  CMakeLists.txt  README.md
.github/workflows/: ci.yml  conan.yml  vcpkg.yml
cmake/: NekoSchemaConfig.cmake.in
conan-center/neko-schema/all/: conandata.yml  conanfile.py
include/neko/schema/: api.hpp  clientConfig.hpp  constexprMap.hpp  exception.hpp  map.hpp  neko.schema.cppm  srcLoc.hpp  types.hpp
ports/neko-schema/: portfile.cmake  vcpkg.json
tests/: module_example.cpp  schema_module_test.cpp  schema_test.cpp
tests/conan/: CMakeLists.txt  README.md  conanfile.txt  test.cpp
tests/vcpkg/: CMakeLists.txt  README.md  test.cpp
